--- a/package.json
+++ b/package.json
@@ -7,10 +7,40 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "wrangler pages dev ./dist",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.8"
+    "@astrojs/cloudflare": "^4.0.1",
+    "@astrojs/solid-js": "^1.2.3",
+    "@astrojs/tailwind": "^2.1.2",
+    "@solid-primitives/i18n": "^1.1.2",
+    "astro": "^1.6.5",
+    "idb-keyval": "^6.2.0",
+    "solid-js": "^1.6.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@vite-pwa/astro": "^0.0.1",
+    "prettier-plugin-astro": "^0.7.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+		"@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+		"eslint-plugin-astro": "^0.19.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+    "prettier": "2.7.1",
+    "rollup-plugin-visualizer": "^5.8.3",
+    "typescript": "^4.8.4",
+    "vite-plugin-pwa": "^0.13.3",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-recipes": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-window": "^6.5.4",
+    "wrangler": "^2.1.15"
   }
 }
