--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "wrangler pages dev ./dist",
+    "cf-dev": "wrangler pages dev -- pnpm run dev",
     "astro": "astro"
   },
   "dependencies": {
@@ -21,15 +22,16 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "@vite-pwa/astro": "^0.0.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-astro": "^0.19.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "prettier": "2.7.1",
     "prettier-plugin-astro": "^0.7.0",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-		"@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.24.0",
-		"eslint-plugin-astro": "^0.19.0",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-    "prettier": "2.7.1",
     "rollup-plugin-visualizer": "^5.8.3",
     "typescript": "^4.8.4",
     "vite-plugin-pwa": "^0.13.3",
