added testing frameworks and reworked api

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ pnpm-debug.log*
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
+ignore-notes.md
