--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cf-dev": "wrangler pages dev -- pnpm run dev",
     "astro": "astro",
     "test": "pnpm dlx playwright test",
-    "test-debug": "pnpm dlx playwright test --debug"
+    "test-debug": "pnpm dlx playwright test --debug",
+    "vitest": "vitest",
+    "test-ct": "playw;right test -c playwright-ct.config.ts"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^4.0.1",
@@ -21,10 +23,12 @@
     "astro": "^1.6.5",
     "idb-keyval": "^6.2.0",
     "solid-js": "^1.6.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vitest": "^0.25.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
+    "@playwright/experimental-ct-solid": "^1.28.0",
     "@playwright/test": "^1.28.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
