--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "pnpm dlx playwright test",
     "test-debug": "pnpm dlx playwright test --debug",
     "vitest": "vitest",
-    "test-ct": "playw;right test -c playwright-ct.config.ts"
+    "test-ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^4.0.1",
