--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,22 @@
-{}
+{
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#6b6900",
+    "activityBar.background": "#6b6900",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#00403f",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#6b6900",
+    "statusBar.background": "#383700",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#6b6900",
+    "statusBarItem.remoteBackground": "#383700",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#383700",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#38370099",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#383700"
+}
