--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "wrangler pages dev ./dist",
     "cf-dev": "wrangler pages dev -- pnpm run dev",
@@ -16,32 +15,33 @@
     "test-ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^4.0.1",
+    "@astrojs/cloudflare": "^5.0.0",
     "@astrojs/solid-js": "^1.2.3",
-    "@astrojs/tailwind": "^2.1.2",
-    "@solid-primitives/i18n": "^1.1.2",
-    "astro": "^1.6.5",
+    "@astrojs/tailwind": "^2.1.3",
+    "@solid-primitives/i18n": "^1.1.3",
+    "astro": "^1.9.2",
     "idb-keyval": "^6.2.0",
-    "solid-js": "^1.6.0",
-    "tailwindcss": "^3.0.24",
-    "vitest": "^0.25.3"
+    "solid-js": "^1.6.9",
+    "tailwindcss": "^3.2.4",
+    "vitest": "^0.27.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.18.0",
-    "@playwright/experimental-ct-solid": "^1.28.0",
-    "@playwright/test": "^1.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@cloudflare/workers-types": "^4.20221111.1",
+    "@playwright/experimental-ct-solid": "^1.29.2",
+    "@playwright/test": "^1.29.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "@vite-pwa/astro": "^0.0.1",
-    "eslint": "^8.24.0",
-    "eslint-plugin-astro": "^0.19.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "prettier": "2.7.1",
-    "prettier-plugin-astro": "^0.7.0",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "rollup-plugin-visualizer": "^5.8.3",
-    "typescript": "^4.8.4",
-    "vite-plugin-pwa": "^0.13.3",
+    "eslint": "^8.32.0",
+    "eslint-plugin-astro": "^0.23.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "2.8.3",
+    "prettier-plugin-astro": "^0.7.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vite-plugin-pwa": "^0.14.1",
     "workbox-cacheable-response": "^6.5.4",
     "workbox-core": "^6.5.4",
     "workbox-expiration": "^6.5.4",
@@ -50,6 +50,6 @@
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
     "workbox-window": "^6.5.4",
-    "wrangler": "^2.1.15"
+    "wrangler": "^2.8.0"
   }
 }
