--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "pnpm": {
+    "updateConfig": {
+      "ignoreDependencies": [
+        ""
+      ]
+    }
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -23,7 +30,7 @@
     "idb-keyval": "^6.2.0",
     "solid-js": "^1.6.9",
     "tailwindcss": "^3.2.4",
-    "vitest": "^0.27.2"
+    "vitest": "^0.26.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
