--- a/.github/workflows/upgrade-dependecies.yml
+++ b/.github/workflows/upgrade-dependecies.yml
@@ -16,6 +16,9 @@ jobs:
       # It doesn't matter if it's deleted when merged, it'll be re-created
       BRANCH_NAME: auto-dependency-upgrades
     steps:
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.23.0
       - uses: actions/checkout@v3
         with:
           # [Optional] Use a separate key to automatically execute checks on the resulting PR
@@ -31,7 +34,7 @@ jobs:
         # ADD YOUR CUSTOM DEPENDENCY UPGRADE COMMANDS BELOW
         run: |
           rm -f pnpm-lock.yaml
-          pnpm install --frozen-lockfile
+          pnpm upgrade
       # END NODE DEPENDENCIES
       - name: Detect changes
         id: changes
