another tweak for workflow file

--- a/.github/workflows/upgrade-dependecies.yml
+++ b/.github/workflows/upgrade-dependecies.yml
@@ -65,13 +65,9 @@ jobs:
           else
             echo "Pull request already exists, won't create a new one."
           fi
-      - name: Spawn Dev Server
+      - name: Spawn Dev Server and test
         if: steps.changes.outputs.COUNT > 0
         # Only open a PR if the branch is not attached to an existing one
         run: |
-          pnpm run build && pnpm run dev
-      - name: Run Tests
-        if: steps.changes.outputs.COUNT > 0
-        # Only open a PR if the branch is not attached to an existing one
-        run: |
-          pnpm run test && pnpm run vitest
+          pnpm run build && 
+          pnpm run dev & sleep 15 && pnpm run test && pnpm run vitest
