--- a/.github/workflows/upgrade-dependecies.yml
+++ b/.github/workflows/upgrade-dependecies.yml
@@ -69,8 +69,4 @@ jobs:
         if: steps.changes.outputs.COUNT > 0
         # Only open a PR if the branch is not attached to an existing one
         run: |
-          pnpm run build &&
-          pnpm run cf-dev &
-          sleep 7 &&
-          pnpm run test &&
-          pnpm run vitest
+          pnpm run test
