--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "preview": "wrangler pages dev ./dist ",
     "cf-dev": "wrangler pages dev --proxy=3000 -- pnpm run dev",
     "astro": "astro",
-    "test": "pnpm dlx playwright test",
+    "test": "pnpm exec playwright install --with-deps && pnpm playwright test",
     "test-debug": "pnpm dlx playwright test --debug",
     "vitest": "vitest",
     "vitest-ci": "vitest run",
+    "playwright-ci": "",
     "test-ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
