--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preview": "wrangler pages dev ./dist ",
     "cf-dev": "wrangler pages dev --proxy=3000 -- pnpm run dev",
     "astro": "astro",
-    "test": "pnpm exec playwright install --with-deps && pnpm playwright test",
+    "test": "pnpm exec playwright install --with-deps && pnpm run cf-dev & sleep 15 && pnpm playwright test",
     "test-debug": "pnpm dlx playwright test --debug",
     "vitest": "vitest",
     "vitest-ci": "vitest run",
