editing routes file for ci

--- a/.github/workflows/upgrade-dependecies.yml
+++ b/.github/workflows/upgrade-dependecies.yml
@@ -73,5 +73,6 @@ jobs:
         if: steps.changes.outputs.COUNT > 0
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CI: true
         run: |
           DEBUG=pw:api pnpm run test
