--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,12 @@ jobs:
       # Run your project's build step
       # - name: Build
       #   run: npm install && npm run build
-      - uses: pnpm/action-setup@v2
+      - name: get pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 7.23.0
-      - uses: actions/setup-node@v3
+      - name: setup node
+        uses: actions/setup-node@v3
         with:
           node-version: "16"
           cache: pnpm
