--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "astro": "^2.0.6",
     "idb-keyval": "^6.2.0",
     "solid-js": "^1.6.10",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "3.2.4",
     "vitest": "^0.28.4"
   },
   "devDependencies": {
