added support for downloading single usfm file for btt writer projects, and refactors typescript alias for types folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@assets/*": ["src/assets/*"],
       "@images/*": ["src/assets/images/*"],
       "@lib/*": ["src/lib/*"],
-      "@types/*": ["src/customTypes/*"],
+      "@customTypes/*": ["src/customTypes/*"],
       "@src/*": ["src/*"]
     }
   },
