--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test-debug": "pnpm dlx playwright test --debug",
     "vitest": "vitest",
     "vitest-ci": "vitest run",
-    "test-ct": "playwright test -c playwright-ct.config.ts"
+    "test-ct": "playwright test -c playwright-ct.config.ts",
+    "lint": "npx eslint"
   },
   "dependencies": {
     "@astrojs/cloudflare": "6.1.3",
@@ -29,6 +30,8 @@
     "@solid-primitives/i18n": "^1.2.0",
     "astro": "^2.0.14",
     "idb-keyval": "^6.2.0",
+    "lz-string": "^1.5.0",
+    "p-limit": "^4.0.0",
     "solid-js": "^1.6.11",
     "tailwindcss": "^3.2.7",
     "vitest": "^0.28.5"
@@ -43,6 +46,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-astro": "^0.23.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-solid": "^0.11.0",
     "prettier": "2.8.4",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.3",
