--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vitest": "vitest",
     "vitest-ci": "vitest run",
     "test-ct": "playwright test -c playwright-ct.config.ts",
-    "lint": "npx eslint"
+    "lint": "npx eslint ./"
   },
   "dependencies": {
     "@astrojs/cloudflare": "6.1.3",
@@ -41,6 +41,7 @@
     "@cloudflare/workers-types": "^4.20230221.0",
     "@playwright/experimental-ct-solid": "^1.31.0",
     "@playwright/test": "^1.31.0",
+    "@types/workbox-sw": "^4.3.3",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vite-pwa/astro": "^0.0.3",
