add logic to check timestamps on blob index when using SW saved response if online

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
 auto-install-peers=true
+engine-strict=true # cloudflare on node 17. Use this locally too as specified in package.json engine.   Big node diff in 17/18 is fetch is native in 17, which can cause some breaking.   
