--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "^17"
+  },
   "pnpm": {
     "updateConfig": {
       "ignoreDependencies": [
