adjust css to container, text, buttons, but not menu

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ pnpm-debug.log*
 ignore-notes.md
 [[path]].js
 /functions/\[\[path\]\].js
+# ui.astro is just my (wk) page for designing and rendering components in isolation / debugging etc; 
+ui.astro
+Settings2.tsx
