--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@astrojs/cloudflare": "6.2.2",
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@kobalte/core": "^0.9.3",
     "@solid-primitives/i18n": "^1.2.4",
     "astro": "^2.2.0",
     "fflate": "^0.7.4",
