--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint": "npx eslint ./"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "6.2.4",
-    "@astrojs/solid-js": "^2.1.1",
+    "@astrojs/cloudflare": "6.2.2",
+    "@astrojs/solid-js": "2.1.0",
     "@astrojs/tailwind": "^3.1.2",
     "@kobalte/core": "^0.9.4",
     "@solid-primitives/i18n": "^1.2.4",
