--- a/package.json
+++ b/package.json
@@ -27,38 +27,38 @@
     "lint": "npx eslint ./"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "7.0.2",
-    "@astrojs/solid-js": "3.0.1",
-    "@astrojs/tailwind": "^5.0.0",
-    "@kobalte/core": "^0.11.0",
-    "@solid-primitives/i18n": "^1.4.1",
-    "astro": "^3.0.11",
-    "fflate": "^0.8.0",
+    "@astrojs/cloudflare": "7.7.0",
+    "@astrojs/solid-js": "3.0.2",
+    "@astrojs/tailwind": "^5.0.2",
+    "@kobalte/core": "^0.11.2",
+    "@solid-primitives/i18n": "^2.0.0",
+    "astro": "^3.5.4",
+    "fflate": "^0.8.1",
     "idb-keyval": "^6.2.1",
-    "p-limit": "^4.0.0",
-    "solid-js": "^1.7.11",
-    "tailwindcss": "^3.3.3",
-    "vitest": "^0.34.4"
+    "p-limit": "^5.0.0",
+    "solid-js": "^1.8.5",
+    "tailwindcss": "^3.3.5",
+    "vitest": "^0.34.6"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230904.0",
-    "@playwright/experimental-ct-solid": "^1.37.1",
-    "@playwright/test": "^1.37.1",
-    "@types/workbox-sw": "^4.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vite-pwa/astro": "^0.1.2",
-    "eslint": "^8.48.0",
-    "eslint-plugin-astro": "^0.29.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@cloudflare/workers-types": "^4.20231025.0",
+    "@playwright/experimental-ct-solid": "^1.39.0",
+    "@playwright/test": "^1.39.0",
+    "@types/workbox-sw": "^4.3.7",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@vite-pwa/astro": "^0.1.5",
+    "eslint": "^8.53.0",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-solid": "^0.13.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prettier": "3.1.0",
+    "prettier-plugin-astro": "^0.12.2",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-pwa": "^0.16.4",
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^0.16.7",
     "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
@@ -67,6 +67,9 @@
     "workbox-routing": "^7.0.0",
     "workbox-strategies": "^7.0.0",
     "workbox-window": "^7.0.0",
-    "wrangler": "^3.7.0"
+    "wrangler": "^3.15.0"
+  },
+  "resolutions": {
+    "intl-messageformat": "10.5.4"
   }
 }
