--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "^18"
+    "node": ">=18.0.0 <22.0.0"
   },
   "pnpm": {
     "updateConfig": {
