--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "vitest": "vitest",
     "vitest-ci": "vitest run",
     "test-ct": "playwright test -c playwright-ct.config.ts",
-    "lint": "npx eslint ./"
+    "lint": "astro check & npx eslint ./"
   },
   "dependencies": {
+    "@astrojs/check": "^0.5.10",
     "@astrojs/cloudflare": "9.1.0",
-    "@astrojs/solid-js": "4.0.1",
+    "@astrojs/solid-js": "4.1.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@kobalte/core": "^0.12.6",
+    "@kobalte/core": "^0.13.0",
     "@solid-primitives/i18n": "^2.1.1",
     "astro": "^4.7.0",
     "fflate": "^0.8.2",
@@ -47,18 +48,18 @@
     "@types/workbox-sw": "^4.3.7",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "@vite-pwa/astro": "^0.3.1",
+    "@vite-pwa/astro": "^0.4.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-astro": "^1.1.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-solid": "^0.13.2",
+    "eslint-plugin-solid": "^0.14.0",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
-    "vite-plugin-pwa": "^0.19.8",
+    "vite-plugin-pwa": "^0.20.0",
     "workbox-cacheable-response": "^7.1.0",
     "workbox-core": "^7.1.0",
     "workbox-expiration": "^7.1.0",
