--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "engines": {
-    "node": ">=18.18.0 <22.0.0"
-  },
+  "packageManager": "pnpm@9.3.0",
   "pnpm": {
     "updateConfig": {
       "ignoreDependencies": [
@@ -27,41 +25,42 @@
     "lint": "astro check & npx eslint ./"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/cloudflare": "10.2.4",
-    "@astrojs/solid-js": "4.1.0",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/cloudflare": "10.4.0",
+    "@astrojs/solid-js": "4.3.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@kobalte/core": "^0.13.0",
+    "@kobalte/core": "^0.13.3",
     "@solid-primitives/i18n": "^2.1.1",
-    "astro": "^4.7.0",
+    "astro": "^4.10.2",
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
     "logrocket": "^8.1.0",
     "p-limit": "^5.0.0",
-    "solid-js": "^1.8.17",
-    "tailwindcss": "^3.4.3"
+    "solid-js": "^1.8.15",
+    "tailwindcss": "^3.4.4",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240423.0",
-    "@playwright/experimental-ct-solid": "^1.43.1",
-    "@playwright/test": "^1.43.1",
+    "@cloudflare/workers-types": "^4.20240605.0",
+    "@playwright/experimental-ct-solid": "^1.44.1",
+    "@playwright/test": "^1.44.1",
     "@types/workbox-sw": "^4.3.7",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "@vite-pwa/astro": "^0.4.0",
-    "vitest": "^1.5.3",
     "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^1.1.1",
+    "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-solid": "^0.14.0",
     "htmlrewriter": "^0.0.7",
-    "prettier": "3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier": "3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.4.5",
-    "vite": "^5.2.10",
+    "vite": "^5.3.0",
     "vite-plugin-pwa": "^0.20.0",
+    "vitest": "^1.5.3",
     "workbox-cacheable-response": "^7.1.0",
     "workbox-core": "^7.1.0",
     "workbox-expiration": "^7.1.0",
@@ -70,7 +69,7 @@
     "workbox-routing": "^7.1.0",
     "workbox-strategies": "^7.1.0",
     "workbox-window": "^7.1.0",
-    "wrangler": "^3.53.0"
+    "wrangler": "^3.60.2"
   },
   "resolutions": {
     "intl-messageformat": "10.5.4"
