--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "engines": {
-    "node": ">=18.0.0 <22.0.0"
-  },
+  "packageManager": "pnpm@9.3.0",
   "pnpm": {
     "updateConfig": {
       "ignoreDependencies": [
@@ -24,50 +22,54 @@
     "vitest": "vitest",
     "vitest-ci": "vitest run",
     "test-ct": "playwright test -c playwright-ct.config.ts",
-    "lint": "npx eslint ./"
+    "lint": "astro check & npx eslint ./"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "9.1.0",
-    "@astrojs/solid-js": "4.0.1",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/cloudflare": "10.4.0",
+    "@astrojs/solid-js": "4.3.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@kobalte/core": "^0.12.4",
+    "@kobalte/core": "^0.13.3",
     "@solid-primitives/i18n": "^2.1.1",
-    "astro": "^4.5.3",
+    "astro": "^4.10.2",
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
+    "logrocket": "^8.1.0",
     "p-limit": "^5.0.0",
     "solid-js": "^1.8.15",
-    "tailwindcss": "^3.4.1",
-    "vitest": "^1.3.1"
+    "tailwindcss": "^3.4.4",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240312.0",
-    "@playwright/experimental-ct-solid": "^1.42.1",
-    "@playwright/test": "^1.42.1",
+    "@cloudflare/workers-types": "^4.20240605.0",
+    "@playwright/experimental-ct-solid": "^1.44.1",
+    "@playwright/test": "^1.44.1",
     "@types/workbox-sw": "^4.3.7",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vite-pwa/astro": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "@vite-pwa/astro": "^0.4.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-solid": "^0.13.1",
-    "prettier": "3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "eslint-plugin-solid": "^0.14.0",
+    "htmlrewriter": "^0.0.7",
+    "prettier": "3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-plugin-pwa": "^0.19.3",
-    "workbox-cacheable-response": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-recipes": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-window": "^7.0.0",
-    "wrangler": "^3.34.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.3.0",
+    "vite-plugin-pwa": "^0.20.0",
+    "vitest": "^1.5.3",
+    "workbox-cacheable-response": "^7.1.0",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-recipes": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0",
+    "workbox-window": "^7.1.0",
+    "wrangler": "^3.60.2"
   },
   "resolutions": {
     "intl-messageformat": "10.5.4"
